@@ -15,8 +15,6 @@ struct Abbreviation;
 struct Abbreviation_beam; 
 struct Abbreviation_beam_req;
 struct Abbreviation_beam_engraver;
-struct G_staff_side_item;
-struct G_text_item;
 struct Abbreviation_req;
 struct Adobe_font_metric;
 struct Adobe_font_char_metric;
@@ -31,6 +29,7 @@ struct Audio_note;
 struct Audio_note_off;
 struct Audio_staff;
 struct Audio_tempo;
+struct Auto_beam_engraver;
 struct Axis_group_element;
 struct Axis_group;
 struct Bar;
@@ -81,6 +80,8 @@ struct Engraver;
 struct Engraver_group_engraver;
 struct Extender;
 struct Extender_req;
+struct G_staff_side_item;
+struct G_text_item;
 struct General_script_def;
 struct Graphical_element;
 
