@@ -1,3 +1,6 @@
+pl 22.jcn5
+	- auto-beaming v0: input/test/auto-beam.ly
+
 pl 22.jcn4
 	- bf's: repeat-engraver; \bar "|:", ":|" now deprecated for repeats
 	- bf: :|, |:
